menu alignment issue fixed

--- a/avatar-admin/src/app/components/menu/menu.component.css
+++ b/avatar-admin/src/app/components/menu/menu.component.css
@@ -1,8 +1,3 @@
 .menuStyle {
-	text-align: left !important;
-}
 
-.ui-menuitem-link {
-	/*border: 1px solid #ffffff;*/
-	text-align: left !important;
 }
